--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
                             <shadedArtifactAttached>true</shadedArtifactAttached>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.cadenkoehl.minecraft2D.Minecraft2D</mainClass>
+                                    <mainClass>com.cadenkoehl.minecraft2D.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
